<resources>
    <string name="app_name">My Musical Mockup</string>
    <string name="mnu_home">Home</string>
    <string name="mnu_playing">Now playing</string>
    <string name="mnu_playlist">Playlist</string>
    <string name="mnu_albums">Albums</string>
    <string name="mnu_songs">Titles</string>
    <string name="mnu_artists">Artists</string>
    <string name="mnu_settings">Settings</string>

    <string name="tag_home">#home</string>
    <string name="tag_playing">#playing</string>
    <string name="tag_playlist">#playlist</string>
    <string name="tag_albums">#albums</string>
    <string name="tag_titles">#titles</string>
    <string name="tag_artists">#artists</string>
    <string name="tag_settings">#settings</string>

    <string name="demo_now_playing_item_text">Martin Garrix - Animals</string>
    <string name="demo_now_playing_item_duration">3m 12s</string>
    <string name="menu_add_to_playlist">Add to Playlist</string>
    <string name="menu_play">Play</string>

    <string name="empty_now_playing">Nothing selected to play.\n Please choose a title in Titles Activity, then come back.</string>
    <string name="demo_now_playing">Play the current position of the global Playlist</string>

    <string name="mock_playlist">
        <![CDATA[
        <h3>Child of MainActivity labeled Home</h3>
        <i>Displays a list of MediaFile (titles) added from the Titles, Artist or Albums Activity in a ListView.
        The data source of the ListView serves as the data source for the MediaPlayer, which by the way
        is run in a <strong>Service</strong> in this App to allow for running in the background even if the App closes.</i>
        ]]>
    </string>
    <string name="mock_artists"><![CDATA[
        <h3>Child of MainActivity labeled Home</h3>
        <i>Displays a list of MediaFile (titles) added from the Titles, Artist or Albums Activity in a ListView.
        The data source of the ListView serves as the data source for the MediaPlayer, which by the way
        is run in a <strong>Service</strong> in this App to allow for running in the background even if the App closes.</i>
        ]]>
    </string>
    <string name="mock_albums">
        <![CDATA[
        <h3>Child of MainActivity labeled Home</h3>
        <i>Displays a list of MediaFile (The Class representing a playable Music title with all its properties)
        added from the Titles Activity in a ListView grouped by the MediaFile.album property. Titles Activity scans for Music Files on the SD-Card music folder.
        <br>
        <br>
        Try it .... and when you look at that code, you will find that it\'s fairly easy to fetch additional Info such as Albums and
        what-have you, presumed the File provides this Info.
        </i>
        ]]>
    </string>
    <string name="mock_settings">
        <![CDATA[
        <h3>Child of MainActivity labeled Home</h3>
        <i>In here you\'d be able to change various settings, perhaps like the amount of Bass and Treble, and who knows what.</i>
        ]]>
    </string>

</resources>
