<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    style="@style/root_view"
    >

    <ViewStub
        android:id="@+id/top_menu_stub"
        style="@style/top_menu_stub"
        android:inflatedId="@+id/top_menu"
        android:layout="@layout/top_menu"
        />

    <TextView
        android:id="@+id/now_playing_empty"
        style="@style/empty"
        android:text="@string/empty_now_playing"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/mainContent"
        style="@style/main_content_container"
        android:gravity="center_horizontal"
        >

        <ImageView
            android:id="@+id/imageView_track_image"
            style="@style/now_playing_image"
            app:srcCompat="@drawable/animals"
            android:contentDescription="@string/demo_now_playing_item_text"/>

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/seekbar_now_playing"
            android:max="100"
            android:progress="30"/>

        <TextView
            android:id="@+id/textView_track_title"
            style="@style/now_playing_title_name"
            tools:text="@string/demo_now_playing_item_text"/>

        <TextView
            android:id="@+id/textView_track_duration"
            style="@style/now_playing_duration"
            tools:text="@string/demo_now_playing_item_duration"/>

        <TextView
            android:id="@+id/textView3"
            style="@style/demo_now_playing"
            android:text="@string/demo_now_playing"/>

    </LinearLayout>


    <ViewStub
        android:id="@+id/media_control_stub"
        style="@style/media_ctrl_stub"
        android:inflatedId="@+id/media_controls_container"
        android:layout="@layout/media_controls_small"
        />


</RelativeLayout>